--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -100,6 +100,7 @@
                             android:layout_height="wrap_content"
                             app:cardBackgroundColor="#14fe6d6d"
                             app:cardElevation="0dp"
+                            android:layout_marginRight="4dp"
                             app:cardCornerRadius="3dp">
                         <TextView
                                 android:layout_width="wrap_content"
@@ -122,7 +123,6 @@
                             android:gravity="center_horizontal"
                             tools:text="공모전/대외활동"
                             android:fontFamily="@font/noto_sans_kr_medium"
-                            android:layout_marginLeft="4dp"
                             boardCategoryText="@{vm.postDetail.community.category}"
                             />
                 </LinearLayout>
@@ -174,8 +174,8 @@
                             android:textColor="@color/black_1"
                             android:letterSpacing="-0.02"
                             android:fontFamily="@font/noto_sans_kr_regular"
-                            tools:text="3일 전"
-                            android:text="@{vm.postDetail.community.regDate}"/>
+                            regDate="@{vm.postDetail.community.regDate}"
+                            tools:text="3일 전"/>
                 </LinearLayout>
                 <TextView
                         android:layout_width="wrap_content"
@@ -273,6 +273,7 @@
                     android:layout_marginTop="11dp"
                     android:layout_marginBottom="11dp"
                     android:fontFamily="@font/noto_sans_kr_regular"
+                    tvVisibilityBySize="@{vm.commentList.size()}"
                     />
 
             <androidx.recyclerview.widget.RecyclerView
