--- a/app/src/main/res/layout/item_board_post_detail_reply.xml
+++ b/app/src/main/res/layout/item_board_post_detail_reply.xml
@@ -51,6 +51,7 @@
                         android:fontFamily="@font/noto_sans_kr_bold"
                         />
                 <ImageView
+                        android:id="@+id/item_board_post_detail_reply_iv_more"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_category_etc"/>
@@ -109,11 +110,13 @@
                         android:textColor="@color/grey_1"
                         android:letterSpacing="-0.02"
                         tools:text="공감 0"
+                        commentLikeTextColor="@{postComment.like}"
                         postDetailLikeNum="@{postComment.likeNum}"
                         android:fontFamily="@font/noto_sans_kr_medium"
                         android:layout_marginLeft="12dp"
                         />
                 <TextView
+                        android:id="@+id/item_board_post_detail_reply_tv_reply"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="10dp"
@@ -128,9 +131,10 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"/>
                 <ImageView
+                        android:id="@+id/item_board_post_detail_reply_iv_like"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/ic_like_outlined"/>
+                        commentLike="@{postComment.like}"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
