--- a/app/src/main/res/layout/item_board_counsel_post_write_category.xml
+++ b/app/src/main/res/layout/item_board_counsel_post_write_category.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
                 name="category"
-                type="com.icoo.ssgsag_android.data.model.category.Category" />
+                type="com.icoo.ssgsag_android.data.model.community.board.CounselBoardCategory" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,7 +20,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:cardCornerRadius="4dp"
             app:cardElevation="0dp"
-            categoryBg="@{category.checked}">
+            categoryBg="@{category.click}">
         <TextView
                 android:id="@+id/item_board_counsel_post_write_category_tv"
                 android:layout_width="wrap_content"
@@ -32,8 +32,8 @@
                 tools:text="일상/연애"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:layout_gravity="center"
-                android:text="@{category.categoryName}"
-                categoryText="@{category.checked}"
+                android:text="@{category.name}"
+                categoryText="@{category.click}"
                 />
     </androidx.cardview.widget.CardView>
 
