--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -66,6 +66,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.core.widget.NestedScrollView
+            android:id="@+id/act_board_post_Detail_nsv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/act_board_post_detail_cl_toolbar"
@@ -74,6 +75,7 @@
             android:background="@color/grey_4"
             android:overScrollMode="never">
         <LinearLayout
+                android:descendantFocusability="blocksDescendants"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -280,7 +282,8 @@
                     android:id="@+id/act_board_post_detail_rv_comment"
                     android:background="@color/white"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
@@ -293,10 +296,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/white">
         <EditText
+                android:id="@+id/act_board_post_detail_et_comment"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="14dp"
-                android:textColor="@color/grey_2"
+                android:textColorHint="@color/grey_2"
+                android:textColor="@color/black_1"
                 android:letterSpacing="-0.01"
                 android:hint="댓글을 입력해주세요"
                 android:fontFamily="@font/noto_sans_kr_regular"
