--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -153,7 +153,7 @@
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:src="@drawable/profile"
-                            profileImg="@{vm.postDetail.community.photoUrlList}"/>
+                            profileImg="@{vm.postDetail.userProfileUrl}"/>
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -206,16 +206,21 @@
                     ivVisibilityByString="@{vm.postDetail.community.photoUrlList}"
                     glideImg="@{vm.postDetail.community.photoUrlList}"/>
 
-                <LinearLayout
-                        android:layout_width="366dp"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="24dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginRight="20dp"
-                        android:layout_marginBottom="16dp"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:layout_marginBottom="16dp">
 
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent">
                     <TextView
                             postDetailLikeNum="@{vm.postDetail.community.likeNum}"
                             android:layout_width="wrap_content"
@@ -236,30 +241,38 @@
                             android:letterSpacing="-0.02"
                             android:textColor="@color/grey_2"
                             android:textSize="12dp" />
-
                     <TextView
                             postDetailViewNum="@{vm.postDetail.community.showNum}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:fontFamily="@font/noto_sans_kr_regular"
                             android:letterSpacing="-0.02"
                             android:textColor="@color/grey_2"
                             android:textSize="12dp" />
+
+                    </LinearLayout>
 
                     <ImageView
                             android:id="@+id/act_board_post_detail_iv_bookmark"
                             postBookmark="@{vm.postDetail.save}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="4dp" />
+                            android:layout_marginRight="4dp"
+                            tools:src="@drawable/ic_bookmark_big"
+                            app:layout_constraintEnd_toStartOf="@+id/act_board_post_detail_iv_like"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
 
                     <ImageView
                             android:id="@+id/act_board_post_detail_iv_like"
                             postLike="@{vm.postDetail.like}"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                </LinearLayout>
+                            android:layout_height="wrap_content"
+                            tools:src="@drawable/ic_like_big_outlined"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
             <View
                     android:layout_width="match_parent"
