--- a/app/src/main/res/layout/item_community_board.xml
+++ b/app/src/main/res/layout/item_community_board.xml
@@ -2,8 +2,8 @@
 <layout>
     <data>
         <variable
-                name="boardMain"
-                type="com.icoo.ssgsag_android.data.model.community.BoardMain" />
+                name="postInfo"
+                type="com.icoo.ssgsag_android.data.model.community.board.PostInfo" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -27,6 +27,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                    cvVisibilityByInt="@{postInfo.isBest}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="#14fe6d6d"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="3dp"
+                    android:layout_marginRight="4dp">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="1dp"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginHorizontal="4dp"
+                        android:text="BEST"
+                        android:textSize="10dp"
+                        android:textColor="#fe6d6d"
+                        android:letterSpacing="-0.02" />
+            </androidx.cardview.widget.CardView>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -34,7 +54,7 @@
                     android:textColor="@color/grey_1"
                     android:letterSpacing="-0.02"
                     tools:text="취업/진로"
-                    android:text="@{boardMain.category}"
+                    boardCategoryText="@{postInfo.category}"
                     android:fontFamily="@font/noto_sans_kr_medium" />
 
             <TextView
@@ -45,7 +65,7 @@
                     android:letterSpacing="-0.02"
                     android:gravity="end"
                     tools:text="1시간 전"
-                    android:text="@{boardMain.time}"
+                    regDate="@{postInfo.regDate}"
                     android:layout_marginLeft="4dp"
                     android:fontFamily="@font/noto_sans_kr_regular"/>
         </LinearLayout>
@@ -57,7 +77,7 @@
                 android:textColor="@color/black_1"
                 android:letterSpacing="-0.01"
                 tools:text="게시판 제목 / 글자 수 20자 제한"
-                android:text="@{boardMain.title}"
+                android:text="@{postInfo.title}"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:layout_marginTop="6dp"
                 android:maxLength="20"/>
@@ -69,7 +89,7 @@
                 android:textColor="@color/grey_1"
                 android:letterSpacing="-0.02"
                 tools:text="글 본문 내용, text box 넘어갈시 말줄임필…"
-                android:text="@{boardMain.description}"
+                android:text="@{postInfo.content}"
                 android:fontFamily="@font/noto_sans_kr_regular"
                 android:ellipsize="end"
                 android:layout_marginTop="6dp"/>
@@ -88,7 +108,7 @@
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                glideCenterCrop="@{boardMain.photo}"/>
+                glideCenterCrop="@{postInfo.photoUrlList}"/>
     </androidx.cardview.widget.CardView>
 
 
