--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -21,18 +21,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/frag_main_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:paddingHorizontal="12dp">
-
-            <ImageView
-                    android:id="@+id/frag_main_iv_mypage"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/profile"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
+                android:layout_height="@dimen/toolbar_height"
+                app:layout_constraintTop_toTopOf="parent">
             <com.google.android.material.tabs.TabLayout
                     android:id="@+id/frag_main_tl"
                     android:layout_width="wrap_content"
@@ -46,15 +36,22 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     style="@style/Base.Widget.Design.TabLayout"/>
 
-            <ImageView
+            <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/frag_main_iv_filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/filter"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="4dp"
+                    android:layout_width="@dimen/toolbar_height"
+                    android:layout_height="match_parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    android:layout_marginRight="12dp">
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_filter"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:visibility="gone"
