[SSGSAG-294] 추천 정보 기능 구현
추천 정보 액티비티 생성
원래 있었던 feed 관련된 클래스들 community 안으로 이동
feed 안에 있던 context 삭제
추천 정보 기능 구현

--- a/app/src/main/res/layout/activity_bookmarked_feed.xml
+++ b/app/src/main/res/layout/activity_bookmarked_feed.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
                 name="vm"
-                type="com.icoo.ssgsag_android.ui.main.feed.FeedViewModel" />
+                type="com.icoo.ssgsag_android.ui.main.community.feed.FeedViewModel" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
