--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -12,19 +12,16 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="97dp"
-            android:layout_marginTop="12dp"
+            android:layout_height="90dp"
+            android:layout_marginBottom="12dp"
             android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
                 android:id="@+id/item_feed_cv_preview_img"
-                android:layout_width="127dp"
+                android:layout_width="120dp"
                 android:layout_height="match_parent"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="1dp"
-                android:layout_marginLeft="2dp"
-                android:layout_marginVertical="3dp">
-
+                app:cardCornerRadius="4dp"
+                app:cardElevation="0dp">
             <ImageView
                     android:id="@+id/item_feed_iv_preview_img"
                     glideTopCropFeedImg="@{feed.FeedPreviewImgUrl}"
@@ -34,82 +31,86 @@
         </androidx.cardview.widget.CardView>
 
 
-        <RelativeLayout
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginLeft="18dp">
+                android:layout_marginLeft="12dp">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10dp"
+                    android:textColor="@color/grey_1"
+                    android:fontFamily="@font/noto_sans_kr_regular"
+                    tools:text="카테고리"
+                    android:layout_marginTop="1dp"
+                    />
 
             <TextView
                     android:id="@+id/item_feed_tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="15dp"
                     android:ellipsize="end"
                     android:fontFamily="@font/noto_sans_kr_medium"
-                    android:lineHeight="19sp"
-                    android:maxLines="2"
+                    android:lines="2"
                     android:text="@{feed.feedName}"
-                    android:textColor="#4f4f4f"
-                    android:textSize="13sp"
-                    tools:text="제목이 길어지아ㅏdfasdfjassdfsdfsdfdlkfjasdlkfjaldskjf아ㅏㅏ아ㅏ아아" />
-            <TextView
+                    android:textColor="@color/black_1"
+                    android:textSize="14dp"
+                    tools:text="제목이 길어지아ㅏdfasdfjassdfsdfsdfdlkfjasdlkfjaldskjf아ㅏㅏ아ㅏ아아"
+                    android:layout_marginTop="6dp"/>
+
+            <View
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/item_feed_tv_name"
-                    android:text="@{feed.feedHost}"
-                    android:layout_marginTop="2dp"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textSize="9sp"
-                    android:lineHeight="17sp"
-                    android:textColor="#656ef0"
-                    android:layout_marginBottom="1dp"/>
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
 
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="7dp"
-                    android:layout_alignParentBottom="true">
-
-                <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/view_r"/>
+                    android:orientation="horizontal">
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/noto_sans_kr_regular"
-                        feedShowNum = "@{feed.showNum}"
-                        tools:text="10,000"
-                        android:textSize="10sp"
-                        android:lineHeight="17sp"
-                        android:textColor="#777777"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="3dp"/>
+                        showNum="@{feed.showNum}"
+                        tools:text="조회수 3,201"
+                        android:textSize="10dp"
+                        android:textColor="@color/grey_2"
+                        android:layout_gravity="center_vertical"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+                        android:text=" | "
+                        android:textSize="10dp"
+                        android:textColor="@color/grey_2"
+                        android:layout_gravity="center_vertical"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+                        regDateByDot="@{feed.feedRegDate}"
+                        tools:text="2020.09.25"
+                        android:textSize="10dp"
+                        android:textColor="@color/grey_2"
+                        android:layout_gravity="center_vertical"/>
                 <View
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"/>
                 <ImageView
-                        android:id="@+id/item_feed_iv_share"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/share_article"
-                        android:layout_gravity="right"/>
-                <ImageView
                         android:id="@+id/item_feed_iv_bookmark"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/bookmark_article_passive"
-                        isBookmarkedPreview="@{feed.isSave}"
-                        android:layout_gravity="right"/>
+                        tools:src="@drawable/ic_bookmark_big_active"
+                        isBookmarked="@{feed.isSave}"/>
             </LinearLayout>
-        </RelativeLayout>
+
+
+        </LinearLayout>
 
     </LinearLayout>
 </layout>
