--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -47,6 +47,7 @@
             android:layout_marginHorizontal="10dp">
 
         <LinearLayout
+                android:id="@+id/frag_community_ll_feed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
