--- a/app/src/main/res/layout/activity_community_feed.xml
+++ b/app/src/main/res/layout/activity_community_feed.xml
@@ -47,10 +47,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="40dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="28dp">
+                app:layout_constraintTop_toTopOf="parent">
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -58,7 +57,6 @@
                     android:textColor="@color/black_1"
                     android:letterSpacing="-0.01"
                     android:fontFamily="@font/noto_sans_kr_bold"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginLeft="22dp"
@@ -69,7 +67,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/item_feed"
-                android:paddingHorizontal="20dp"
                 android:overScrollMode="never"/>
 
     </LinearLayout>
