--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -13,8 +13,9 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:layout_marginBottom="12dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="20dp">
 
         <androidx.cardview.widget.CardView
                 android:id="@+id/item_feed_cv_preview_img"
@@ -105,7 +106,7 @@
                         android:layout_height="24dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        tools:src="@drawable/ic_bookmark_big_active"
+                        tools:src="@drawable/ic_bookmark_filled_active"
                         isBookmarked="@{feed.isSave}"/>
             </LinearLayout>
 
