--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -7,28 +8,105 @@
                 type="com.icoo.ssgsag_android.ui.main.ssgSag.SsgSagViewModel"/>
     </data>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:background="@color/white">
 
-
         <com.icoo.ssgsag_android.util.view.NonSwipeViewPager
                 android:id="@+id/act_main_vp"
                 android:layout_width="match_parent"
-                android:elevation="0dp"
                 android:layout_height="match_parent"
+                android:elevation="0dp"
                 android:saveEnabled="false"/>
 
         <com.google.android.material.tabs.TabLayout
                 android:id="@+id/act_main_tl"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_navi_height"
-                android:elevation="2dp"
                 app:tabIndicator="@null"
-                android:layout_alignParentBottom="true"/>
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-    </RelativeLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/main_navi_height"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:orientation="horizontal">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/top_navigation_rl_ssg_sag"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+                <ImageView
+                        android:visibility="invisible"
+                        android:id="@+id/frag_ssg_sag_iv_ssg_sag_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/selector_navigation_notification"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/act_main_cl_noticeCount"
+                        app:layout_constraintTop_toTopOf="@+id/frag_ssg_sag_iv_ssg_sag_icon"
+                        app:layout_constraintBottom_toTopOf="@+id/frag_ssg_sag_iv_ssg_sag_icon"
+                        app:layout_constraintStart_toEndOf="@+id/frag_ssg_sag_iv_ssg_sag_icon"
+                        app:layout_constraintEnd_toEndOf="@+id/frag_ssg_sag_iv_ssg_sag_icon"
+                        clVisibilityByInt="@{vm.noticeCount}"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                    <ImageView
+                            android:layout_width="17dp"
+                            android:layout_height="17dp"
+                            android:src="@drawable/circle_fe6d6d"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+
+                    <TextView
+                            android:id="@+id/act_main_tv_notice_count"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="9dp"
+                            android:textColor="@color/white"
+                            tools:text="알림 수"
+                            android:text="@{Integer.toString(vm.noticeCount)}"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <RelativeLayout
+                    android:visibility="visible"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
