--- a/app/src/main/res/layout/navigation_main.xml
+++ b/app/src/main/res/layout/navigation_main.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+                name="vm"
+                type="com.icoo.ssgsag_android.ui.main.ssgSag.SsgSagViewModel" />
+    </data>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="@dimen/main_navi_height"
         android:background="@color/white"
@@ -140,13 +145,21 @@
                     android:layout_height="32dp"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp">
+
+                <ImageView
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/selector_navigation_mypage"/>
+
                 <ImageView
                         android:id="@+id/navi_main_iv_mypage"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_centerHorizontal="true"
                         android:layout_margin="6dp"
-                        android:background="@color/grey_3" />
+                        profileImg="@{vm.userInfo.userProfileUrl}"/>
             </RelativeLayout>
             <TextView
                     android:layout_width="wrap_content"
@@ -161,3 +174,4 @@
         </RelativeLayout>
     </LinearLayout>
 </RelativeLayout>
+</layout>
